force-app/main/default/objects/Appointment__c/fields/Allowance_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Percentage_Number__c</fullName>
    <formula>text(Insurance_Plan__r.Allowance_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Percentage Number</label>
    <type>Text</type>
</CustomField>