force-app/main/default/objects/Appointment__c/fields/Appointment_Approval__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Approval__c</fullName>
    <label>Appointment Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Pending My Approval</fullName>
            </value>
            <value>
                <fullName>Sent Back To Provider</fullName>
            </value>
            <value>
                <fullName>Approve Appointment</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>