force-app/main/default/objects/Appointment__c/fields/Appointment_Confirmed_By__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Confirmed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>