force-app/main/default/objects/Appointment__c/fields/Appointment_Day__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Day__c</fullName>
    <formula>CASE( MOD(  Appointment_Date__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
 

&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Day</label>
    <type>Text</type>
</CustomField>