force-app/main/default/objects/Appointment__c/fields/Appointment_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Error_Log__c</fullName>
    <label>Appointment Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>