force-app/main/default/objects/Appointment__c/fields/Appointment_Errors_Log__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Errors_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Errors Log</label>
    <type>Checkbox</type>
</CustomField>