force-app/main/default/objects/Appointment__c/fields/Appointment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Appointment_External_Id__c</fullName>
    <label>Appointment External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>