force-app/main/default/objects/Appointment__c/fields/Appointment_Guid__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Guid__c</fullName>
    <label>Appointment Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>