force-app/main/default/objects/Appointment__c/fields/Appointment_Is_Today__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Is_Today__c</fullName>
    <formula>Appointment_Date__c = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Is Today</label>
    <type>Checkbox</type>
</CustomField>