force-app/main/default/objects/Appointment__c/fields/Appointment_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>