force-app/main/default/objects/Appointment__c/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Flowsheet Entry</fullName>
                <default>true</default>
                <label>Pending Flowsheet Entry</label>
            </value>
            <value>
                <fullName>Provider Review</fullName>
            </value>
            <value>
                <fullName>Sent Back To Floor staff</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>