force-app/main/default/objects/Appointment__c/fields/Appointment_Week__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Week__c</fullName>
    <formula>IF(
 

AND(
 

(Appointment_Date__c - TODAY()) + MOD( TODAY() - DATE(1900, 1, 8), 7) &lt;= -1,
 

Appointment_Date__c - TODAY() &gt;= (-7 - MOD( TODAY() - DATE(1900, 1, 8), 7))
 

)
 

,&quot;Last Week&quot;,
 

IF(
 

AND(
 

(Appointment_Date__c - TODAY()) + MOD( TODAY() - DATE(1900, 1, 8), 7) &gt;= 0,
 

(Appointment_Date__c - TODAY()) + MOD( TODAY() - DATE(1900, 1, 8), 7) &lt;= 6
 

)
 

,&quot;This Week&quot;,
 

IF(
 

AND(
 

(Appointment_Date__c - TODAY()) + MOD( TODAY() - DATE(1900, 1, 8), 7) &gt;= 7,
 

(Appointment_Date__c - TODAY()) + MOD( TODAY() - DATE(1900, 1, 8), 7) &lt;= 13
 

)
 

,&quot;Next Week&quot;,null
 

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment Week</label>
    <type>Text</type>
</CustomField>