force-app/main/default/objects/Appointment__c/fields/Appointments_Comments__c.field-meta.xml
<CustomField>
    <fullName>Appointments_Comments__c</fullName>
    <label>Appointments Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>