force-app/main/default/objects/Appointment__c/fields/Assigned_Staff_at_time_of_appointment__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff_at_time_of_appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Staff at time of appointment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments3</relationshipName>
    <type>Lookup</type>
</CustomField>