force-app/main/default/objects/Appointment__c/fields/Auth_Created__c.field-meta.xml
<CustomField>
    <fullName>Auth_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking whether Authorization created or not</description>
    <label>Auth Created</label>
    <type>Checkbox</type>
</CustomField>