force-app/main/default/objects/Appointment__c/fields/Cancel_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Follow_Up_Notes__c</fullName>
    <label>Cancel Follow Up Notes</label>
    <type>TextArea</type>
</CustomField>