force-app/main/default/objects/Appointment__c/fields/Cancel_Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Follow_Up_Status__c</fullName>
    <label>Cancel Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need to Call</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Unable To Contact</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>