force-app/main/default/objects/Appointment__c/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <label>Cancellation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>