force-app/main/default/objects/Appointment__c/fields/Cancellation_Details_Id__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Details_Id__c</fullName>
    <label>Cancellation Details Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>