force-app/main/default/objects/Appointment__c/fields/Care_Cloud_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Care_Cloud_Appointment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Care Cloud Appointment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>