force-app/main/default/objects/Appointment__c/fields/Care_Cloud_Comments__c.field-meta.xml
<CustomField>
    <fullName>Care_Cloud_Comments__c</fullName>
    <label>Care Cloud Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>