force-app/main/default/objects/Appointment__c/fields/Care_Cloud_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Care_Cloud_Patient_Id__c</fullName>
    <label>Care Cloud Patient Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>