force-app/main/default/objects/Appointment__c/fields/Chart_Number_From_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_Number_From_Person_Account__c</fullName>
    <formula>Patient__r.Chart_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chart Number From Person Account</label>
    <type>Text</type>
</CustomField>