force-app/main/default/objects/Appointment__c/fields/Chiro__c.field-meta.xml
<CustomField>
    <fullName>Chiro__c</fullName>
    <formula>BEGINS( Visit_Reason__c , &quot;CHIRO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chiro</label>
    <type>Checkbox</type>
</CustomField>