force-app/main/default/objects/Appointment__c/fields/CN_On_Appt_But_Not_Account__c.field-meta.xml
<CustomField>
    <fullName>CN_On_Appt_But_Not_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CN On Appt But Not Account</label>
    <type>Checkbox</type>
</CustomField>