force-app/main/default/objects/Appointment__c/fields/Completed_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Completed_This_Year__c</fullName>
    <formula>AND(
NOT(ISPICKVAL(Status__c, &quot;Cancelled&quot;)),
NOT(ISPICKVAL(Status__c, &quot;Pending&quot;)),
Appointment_Date__c &lt; Today(),
YEAR( Appointment_Date__c ) = YEAR(Today())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed This Year</label>
    <type>Checkbox</type>
</CustomField>