force-app/main/default/objects/Appointment__c/fields/Confirmation_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Call_Notes__c</fullName>
    <label>Confirmation Call Notes</label>
    <type>TextArea</type>
</CustomField>