force-app/main/default/objects/Appointment__c/fields/Confirmed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date_Time__c</fullName>
    <label>Confirmed Date/Time</label>
    <type>DateTime</type>
</CustomField>