force-app/main/default/objects/Appointment__c/fields/CPT_code_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPT_code_Minutes__c</fullName>
    <formula>IF(
    AND(Flowsheet__r.Code_1__c, Flowsheet__r.Minutes_Total_1__c &gt; 0),
    &apos;97110: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_1__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_2__c, Flowsheet__r.Minutes_Total_2__c &gt; 0),
    &apos;97530: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_2__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_3__c, Flowsheet__r.Minutes_Total_3__c &gt; 0),
    &apos;97112: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_3__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_4__c, Flowsheet__r.Minutes_Total_4__c &gt; 0),
    &apos;97140: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_4__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_5__c, Flowsheet__r.Minutes_Total_5__c &gt; 0),
    &apos;97750: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_5__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_6__c, Flowsheet__r.Minutes_Total_6__c &gt; 0),
    &apos;97012: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_6__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_7__c, Flowsheet__r.Minutes_Total_7__c &gt; 0),
    &apos;95851: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_7__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_8__c, Flowsheet__r.Minutes_Total_8__c &gt; 0),
    &apos;97016: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_8__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_9__c, Flowsheet__r.Minutes_Total_9__c &gt; 0),
    &apos;97014/G0283: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_9__c) &amp; &apos; || &apos;,
    &apos;&apos;
) &amp;
IF(
    AND(Flowsheet__r.Code_10__c, Flowsheet__r.Minutes_Total_10__c &gt; 0),
    &apos;9039/S8948: &apos; &amp; TEXT(Flowsheet__r.Minutes_Total_10__c) &amp; &apos; || &apos;,
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPT code Minutes</label>
    <type>Text</type>
</CustomField>