force-app/main/default/objects/Appointment__c/fields/Created_in_Care_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Care_Cloud__c</fullName>
    <label>Created in Care Cloud</label>
    <type>DateTime</type>
</CustomField>