force-app/main/default/objects/Appointment__c/fields/Current_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Id__c</fullName>
    <formula>$User.Id =  Patient_s_Currently_Assigned_Staff__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Id</label>
    <type>Checkbox</type>
</CustomField>