force-app/main/default/objects/Appointment__c/fields/DateValue_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DateValue_Created_Date__c</fullName>
    <formula>DateValue( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateValue Created Date</label>
    <type>Date</type>
</CustomField>