force-app/main/default/objects/Appointment__c/fields/Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Week__c</fullName>
    <formula>weekday( Appointment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>