force-app/main/default/objects/Appointment__c/fields/Days_Since_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Appointment__c</fullName>
    <formula>If(
(Today() -  Appointment_Date__c)&lt;0,0,
(Today() -  Appointment_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Appointment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>