force-app/main/default/objects/Appointment__c/fields/Days_Until_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Appointment__c</fullName>
    <formula>If(
(Appointment_Date__c - Today()) &lt; 0,0,
Appointment_Date__c - Today()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Appointment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>