force-app/main/default/objects/Appointment__c/fields/Diagnostics__c.field-meta.xml
<CustomField>
    <fullName>Diagnostics__c</fullName>
    <label>Diagnostics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>