force-app/main/default/objects/Appointment__c/fields/Edit_FlowSheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Edit_FlowSheet_Link__c</fullName>
    <formula>IF(
    NOT(ISBLANK(CPT_Code_Units__c)),
    HYPERLINK(
        &apos;/lightning/action/quick/Appointment__c.Edit_Flowsheet2?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&apos; &amp; 
        X18_digit_ID__c &amp; 
        &apos;&amp;backgroundContext=%2Flightning%2Fr%2FAppointment__c%2F&apos; &amp; 
        X18_digit_ID__c &amp; 
        &apos;%2Fview&apos;,
        &apos;Edit Flowsheet&apos;
    ),
    &quot;Not Ready&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit FlowSheet Link</label>
    <type>Text</type>
</CustomField>