force-app/main/default/objects/Appointment__c/fields/editflowsheet_filter__c.field-meta.xml
<CustomField>
    <fullName>editflowsheet_filter__c</fullName>
    <formula>CreatedDate &gt;= DATETIMEVALUE(&quot;2025-05-06 00:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>editflowsheet filter</label>
    <type>Checkbox</type>
</CustomField>