force-app/main/default/objects/Appointment__c/fields/Employer_Outreach_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Employer_Outreach_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Outreach Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employer_Outreach_Opportunity__c.Employer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Employer_Outreach_Opportunity__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>