force-app/main/default/objects/Appointment__c/fields/Enter_FlowSheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Enter_FlowSheet_Link__c</fullName>
    <formula>IF(
    $Profile.Name = &quot;Clinical Tester&quot;,
    &quot;No Access&quot;,
    HYPERLINK(&apos;/lightning/action/quick/Appointment__c.Enter_FlowSheet?objectApiName=Appointment__c&amp;context=RECORD_DETAIL&amp;recordId=&apos; &amp; 
    X18_digit_ID__c &amp; 
    &apos;&amp;backgroundContext=%2Flightning%2Fr%2FAppointment__c%2F&apos; &amp; X18_digit_ID__c &amp; &apos;%2Fview&apos;, 
    &apos;Enter Flowsheet&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enter FlowSheet Link</label>
    <type>Text</type>
</CustomField>