force-app/main/default/objects/Appointment__c/fields/EOO_Notes__c.field-meta.xml
<CustomField>
    <fullName>EOO_Notes__c</fullName>
    <description>Notes from the Employer Outreach Opportunity. This field populated via Flow.</description>
    <label>EOO Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>