force-app/main/default/objects/Appointment__c/fields/Floorstaff_changed__c.field-meta.xml
<CustomField>
    <fullName>Floorstaff_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floorstaff changed</label>
    <type>Checkbox</type>
</CustomField>