force-app/main/default/objects/Appointment__c/fields/Flowsheet__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flowsheet</label>
    <referenceTo>Flowhsheet__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>