force-app/main/default/objects/Appointment__c/fields/Flowsheet_ChargeId__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_ChargeId__c</fullName>
    <label>Flowsheet ChargeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>