force-app/main/default/objects/Appointment__c/fields/FlowSheet_Generated__c.field-meta.xml
<CustomField>
    <fullName>FlowSheet_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlowSheet Generated</label>
    <type>Checkbox</type>
</CustomField>