force-app/main/default/objects/Appointment__c/fields/Flowsheet_Initial_Floor_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Initial_Floor_Submission_Date__c</fullName>
    <description>Set the first time the floor staff user submits the flowsheets. Resubmissions will not update this field</description>
    <label>Flowsheet Initial Submission Date</label>
    <type>DateTime</type>
</CustomField>