force-app/main/default/objects/Appointment__c/fields/Flowsheet_No_Provider_Resubmissions__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_No_Provider_Resubmissions__c</fullName>
    <description>Counter field to store the number of times floor resubmission was required</description>
    <label>Number of Provider Resubmissions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>