force-app/main/default/objects/Appointment__c/fields/Flowsheet_Provider_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Provider_Approval_Date__c</fullName>
    <description>Stores the provider approval datetime</description>
    <label>Provider Approval Date</label>
    <type>DateTime</type>
</CustomField>