force-app/main/default/objects/Appointment__c/fields/Flowsheet_Total_Units2__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Total_Units2__c</fullName>
    <formula>Flowsheet__r.Total_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flowsheet Total Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>