force-app/main/default/objects/Appointment__c/fields/Flowsheet_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Total_Units__c</fullName>
    <label>Flowsheet Total Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>