force-app/main/default/objects/Appointment__c/fields/Flowsheet_Updated__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flowsheet Updated</label>
    <type>Checkbox</type>
</CustomField>