force-app/main/default/objects/Appointment__c/fields/Flowsheets_Updated_By_SnwFlk_Integ__c.field-meta.xml
<CustomField>
    <fullName>Flowsheets_Updated_By_SnwFlk_Integ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flowsheets Updated By SnwFlk Integ</label>
    <type>Checkbox</type>
</CustomField>