force-app/main/default/objects/Appointment__c/fields/From_CareCloud_Export__c.field-meta.xml
<CustomField>
    <fullName>From_CareCloud_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From the CareCloud export provided by CareCloud as of 2/15/23.  Appointments without this field checked need to be archived as non-Alliance Ortho appointments.  Meaning they are from NJ Spine.</description>
    <label>From CareCloud Export</label>
    <type>Checkbox</type>
</CustomField>