force-app/main/default/objects/Appointment__c/fields/FSAssigned_Staff_name_during_appointment__c.field-meta.xml
<CustomField>
    <fullName>FSAssigned_Staff_name_during_appointment__c</fullName>
    <formula>Assigned_Staff_at_time_of_appointment__r.FirstName &amp; &quot; &quot; &amp; Assigned_Staff_at_time_of_appointment__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Staff name during appointment</label>
    <type>Text</type>
</CustomField>