force-app/main/default/objects/Appointment__c/fields/FSPatients_Currently_Assigned_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>FSPatients_Currently_Assigned_Staff_Name__c</fullName>
    <formula>Patient_s_Currently_Assigned_Staff__r.FirstName &amp; &quot; &quot; &amp;  Patient_s_Currently_Assigned_Staff__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patients Currently Assigned Staff Name</label>
    <type>Text</type>
</CustomField>