force-app/main/default/objects/Appointment__c/fields/HQ_Last_NPP_Mail_sent_On__c.field-meta.xml
<CustomField>
    <fullName>HQ_Last_NPP_Mail_sent_On__c</fullName>
    <formula>Patient__r.Last_NPP_Mail_Sent_On__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last NPP Mail sent On</label>
    <type>Date</type>
</CustomField>