force-app/main/default/objects/Appointment__c/fields/HQ_NPP_Completed__c.field-meta.xml
<CustomField>
    <fullName>HQ_NPP_Completed__c</fullName>
    <formula>Patient__r.NPP_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPP Completed</label>
    <type>Checkbox</type>
</CustomField>