force-app/main/default/objects/Appointment__c/fields/HQ_NPP_mail_sent__c.field-meta.xml
<CustomField>
    <fullName>HQ_NPP_mail_sent__c</fullName>
    <formula>Patient__r.HQ_NPP_mail_sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPP mail sent</label>
    <type>Checkbox</type>
</CustomField>