force-app/main/default/objects/Appointment__c/fields/Imaging_Not_Reviewed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Not_Reviewed_Reason__c</fullName>
    <label>Imaging Not Reviewed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Did Not Bring Imaging</fullName>
            </value>
            <value>
                <fullName>Imaging Available But No Report</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>