force-app/main/default/objects/Appointment__c/fields/Imaging_Not_Reviewed_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Not_Reviewed_Reason_Detail__c</fullName>
    <label>Imaging Not Reviewed Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>