force-app/main/default/objects/Appointment__c/fields/Imaging_Review_Pending__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Review_Pending__c</fullName>
    <formula>Patient__r.Imaging_Review_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imaging Review Pending</label>
    <type>Checkbox</type>
</CustomField>