force-app/main/default/objects/Appointment__c/fields/Imaging_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Imaging_Reviewed__c</fullName>
    <label>Imaging Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No_Only</valueSetName>
    </valueSet>
</CustomField>