force-app/main/default/objects/Appointment__c/fields/Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Plan</label>
    <referenceTo>Insurance_Plan__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>