force-app/main/default/objects/Appointment__c/fields/Intake_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Intake_Completed_By__c</fullName>
    <formula>Intake__r.Intake_Completed_By__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Completed By</label>
    <type>Text</type>
</CustomField>