force-app/main/default/objects/Appointment__c/fields/Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date__c</fullName>
    <formula>Intake__r.Intake_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Date</label>
    <type>Date</type>
</CustomField>