force-app/main/default/objects/Appointment__c/fields/Intake_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Intake_Is_Available__c</fullName>
    <formula>If(
 Patient__r.Number_of_Intakes__c &gt; 0,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Is Available</label>
    <type>Checkbox</type>
</CustomField>