force-app/main/default/objects/Appointment__c/fields/Intake_Type__c.field-meta.xml
<CustomField>
    <fullName>Intake_Type__c</fullName>
    <label>Intake Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
            <value>
                <fullName>Cash Pay</fullName>
            </value>
            <value>
                <fullName>Major Med</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>